# poolsim

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/: release-checklist.md
.github/workflows/: ci.yml  publish.yml
crates/poolsim-cli/: Cargo.toml  README.md
crates/poolsim-cli/src/: args.rs  config.rs  main.rs
crates/poolsim-cli/src/render/: csv.rs  json.rs  table.rs
crates/poolsim-cli/tests/: cli_integration.rs  default_parse_path.rs  docs_fixtures.rs
crates/poolsim-core/: Cargo.toml  README.md
crates/poolsim-core/benches/: core_perf.rs
crates/poolsim-core/examples/: quickstart.rs
crates/poolsim-core/src/: distribution.rs  erlang.rs  error.rs  lib.rs  monte_carlo.rs  optimizer.rs  sensitivity.rs  types.rs
crates/poolsim-core/tests/: core_behavior.rs  core_coverage.rs  docs_fixtures.rs  performance_contract.rs
crates/poolsim-web/: Cargo.toml  README.md
crates/poolsim-web/examples/: build_router.rs
crates/poolsim-web/src/: error.rs  lib.rs  main.rs  state.rs
crates/poolsim-web/src/middleware/: mod.rs  rate_limit.rs
crates/poolsim-web/src/routes/: batch.rs  evaluate.rs  health.rs  live.rs  mod.rs  models.rs  sensitivity.rs  simulate.rs
crates/poolsim-web/tests/: docs_fixtures.rs  http_ws_integration.rs
docs/: README.md  cli-reference.md  library-api.md  sizing-calculator.md  web-api.md
docs/fixtures/: README.md  batch.json  batch.toml  cli-config.toml  latencies.txt  web-evaluate.json  web-sensitivity.json  web-simulate.json  web-ws-request.json
tools/: activate_rust_tools.sh  check_coverage_threshold.py  check_docs_api_coverage.py  check_docs_folder.py  check_examples_coverage.py  check_spec_traceability.py  public-api-index.md  spec_traceability.json  sync_version.py
