[workspace]
members = [
  "crates/poolsim-core",
  "crates/poolsim-cli",
  "crates/poolsim-web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
authors = ["Gregorian Rayne <gregorianrayne09@gmail.com>"]
repository = "https://github.com/gregorian-09/poolsim"
homepage = "https://github.com/gregorian-09/poolsim"
documentation = "https://docs.rs/poolsim-core"
description = "Connection pool sizing simulator"

[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.9", features = ["ws", "macros"] }
clap = { version = "=4.4.18", features = ["derive"] }
csv = "1.3.0"
futures-util = "0.3.30"
num_cpus = "1.16.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "=1.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
statrs = "0.16.0"
tabled = "0.15.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
toml = "=0.7.8"
tower = { version = "0.5.1", features = ["limit"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
todo = "warn"
