[package]
name = "poolsim-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Web service for poolsim"
readme = "README.md"
keywords = ["connection-pool", "web", "rest", "websocket", "simulation"]
categories = ["web-programming::http-server"]

[dependencies]
axum.workspace = true
futures-util.workspace = true
num_cpus.workspace = true
poolsim-core = { path = "../poolsim-core", version = "0.1.0" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio-tungstenite = "0.24.0"
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
